mainTemplate.json
{
  "$schema":"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion":"1.0.0.0",
  "parameters":{
    "dnsNameForAnsiblePublicIP":{
      "type":"string",
      "metadata":{
        "description":"DNS Name for Jumpbox VM"
      }
    },
    "dnsNameForFrontPublicIP":{
      "type":"string",
      "metadata":{
        "description":"Public IP address for web-front VM"
      }
    },
    "hcPublicIPAddressName":{
      "type":"string",
      "defaultValue": "hcPublicIP",
      "metadata":{
        "description":"Public IP address Name for Jumpbox VM"
      }
    },
    "frPublicIPAddressName":{
      "type":"string",
      "defaultValue": "frPublicIP",
      "metadata":{
        "description":"Public IP address Name for web-front load balancer VM"
      }
    },
    "hcUsername":{
      "type":"string",
      "metadata":{
        "description":"Username for the Ansible Control Virtual Machine and provisoning"
      },
      "defaultValue":"tomasz"
    },
    "authenticationType": {
      "type": "string",
      "allowedValues": [
        "password",
        "sshPublicKey"
      ]
    },
    "hcPassword": {
      "type": "securestring",
      "defaultValue": "",
      "metadata": {
        "description": "Password for the Virtual Machine. Not used if authenticationType of sshPublicKey."
      }
    },
    "sshKeyData":{
      "type":"string",
      "defaultValue": "",
      "metadata":{
        "description":"SSH RSA public key file as a string. Not used if authenticationType of password."
      }
    },
    "frVmSize":{
      "type":"string",
      "defaultValue":"Standard_B2s",
      "metadata":{
        "description":"Instance size for Web Front VMs"
      }
    },
    "numberOfFront":{
      "type":"int",
      "defaultValue":2,
      "metadata":{
        "description":"Number of Front nodes to create >=2"
      }
    },
    "bkVmSize":{
      "type":"string",
      "defaultValue":"Standard_B2s",
      "metadata":{
        "description":"Instance size for Web Front VMs Minimum Standard_A2"
      }
    },
    "numberOfBack":{
      "type":"int",
      "defaultValue":2,
      "metadata":{
        "description":"Number of Back nodes to create >=2"
      }
    },
    "frStorageAccountType": {
      "type": "string",
      "defaultValue": "Premium_LRS",
      "metadata":{
        "description":"Storage Account type for Front VMs"
      }
    },
    "bkStorageAccountType": {
      "type": "string",
      "defaultValue": "Premium_LRS",
      "metadata":{
        "description":"Storage Account type for Back VMs"
      }
    },
    "shopSize": {
      "type": "string",
      "defaultValue": "Small",
      "allowedValues": [
        "Small",
        "Medium",
        "Large"
      ],
      "metadata": {
        "description": "T-shirt size of the PrestaShop cluster"
      }
    },
    "prestashop_firstname":{
      "type":"string",
      "metadata":{
        "description":"Prestatshop Admin Firstname"
      }
    },
    "prestashop_lastname":{
      "type":"string",
      "metadata":{
        "description":"Prestatshop Admin Lastname"
      }
    },
    "prestashop_email":{
      "type":"string",
      "metadata":{
        "description":"Prestatshop Admin email"
      }
    },
    "prestashop_password":{
      "type":"securestring",
      "metadata":{
        "description":"Prestatshop Admin Password"
      }
    },
    "templatesBaseURL":{
      "type":"string",
      "metadata": {
        "description":"Base template URL for nested template",
        "artifactsBaseUrl": ""
      },
      "defaultValue": "https://raw.githubusercontent.com/tomkor/azure-template-performance/master"
    },
    "hcSubnetPrefix":{
      "type":"string",
      "metadata": {
        "description":"Control VM Subnet Prefix"
      },
      "defaultValue": "10.0.0.0/24"
    },
    "frSubnetPrefix":{
      "type":"string",
      "metadata": {
        "description":"Front Subnet Prefix"
      },
      "defaultValue": "10.0.2.0/24"
    },
    "bkSubnetPrefix":{
      "type":"string",
      "metadata": {
        "description":"Back Subnet Prefix"
      },
      "defaultValue": "10.0.4.0/24"
    },
    "virtualNetworkName":{
      "type":"string",
      "metadata": {
        "description":"Virtual Network Name"
      },
      "defaultValue": "vnet-prestashop"
    },
    "addressPrefix":{
      "type":"string",
      "metadata": {
        "description":"Virtual Network address Prefix"
      },
      "defaultValue": "10.0.0.0/16"
    },
    "hcSubnetName":{
      "type":"string",
      "metadata": {
        "description":"Name of Jumpbox subnet"
      },
      "defaultValue": "hc-subnet"
    },
    "frSubnetName":{
      "type":"string",
      "metadata": {
        "description":"Name of Front subnet"
      },
      "defaultValue": "front-subnet"
    },
    "bkSubnetName":{
      "type":"string",
      "metadata": {
        "description":"Name of Back subnet"
      },
      "defaultValue": "back-subnet"
    },
    "frStorageAccountName":{
      "type":"string",
      "metadata": {
        "description":"Storage Account Name for Front VMs"
      }
    },
    "bkStorageAccountName":{
      "type":"string",
      "metadata": {
        "description":"Storage Account Name for Back VMs"
      }
    },
    "location":{
      "type":"string",
      "metadata": {
        "description":"Deployment location"
      }
    }
  },
  "variables":{
    "diagnosticsStorageAccountName": "[concat(uniqueString(resourceGroup().id),'diag')]",
    "diagnosticsStorageAccountType": "Standard_LRS",
    "configuration":{
      "frontTemplateURL":"[concat(parameters('templatesBaseURL'),'/nested/front.json')]",
      "backTemplateURL":"[concat(parameters('templatesBaseURL'),'/nested/back.json')]"
    },
    "frPublicIPAddressType":"Dynamic",
    "frFaultDomainCount":"3",
    "frUpdateDomainCount":"5",
    "bkFaultDomainCount":"3",
    "bkUpdateDomainCount":"5",
    "dnsserver":"8.8.8.8",
    "imagePublisher":"Canonical",
    "imageOffer":"UbuntuServer",
    "ubuntuOSVersion":"16.04.0-LTS",
    "hcOSDiskName":"hcosdisk",
    "keyStorageAccountName":"[concat('key', uniquestring(resourceGroup().id, deployment().name))]",
    "keyStorageAccountType":"Standard_LRS",
    "hcNicName":"hcVnic",
    "vnetID":"[resourceId('Microsoft.Network/virtualNetworks',parameters('virtualNetworkName'))]",
    "subnetCIDR":".0/24",
    "hcSubnetRoot":"[concat( split(parameters('hcSubnetPrefix'), '.')[0], '.', split(parameters('hcSubnetPrefix'), '.')[1], '.', split(parameters('hcSubnetPrefix'), '.')[2])]",
    "frSubnetRoot":"[concat( split(parameters('frSubnetPrefix'), '.')[0], '.', split(parameters('frSubnetPrefix'), '.')[1], '.', split(parameters('frSubnetPrefix'), '.')[2])]",
    "bkSubnetRoot":"[concat( split(parameters('bkSubnetPrefix'), '.')[0], '.', split(parameters('bkSubnetPrefix'), '.')[1], '.', split(parameters('bkSubnetPrefix'), '.')[2])]",
    "assetsStorageAccountId":"[resourceId(variables('keyStorageAccountName'),'Microsoft.Storage/storageAccounts', variables('keyStorageAccountName'))]",
    "hcStorageAccountName":"[concat('hc', uniquestring(resourceGroup().id, deployment().name) )]",
    "hcStorageAccountType":"Standard_LRS",
    "cleanRGP":"[uniqueString(resourceGroup().id, deployment().name)]",
    "frAvailabilitySetName":"[concat('frav', variables('cleanRGP'))]",
    "bkAvailabilitySetName":"[concat('bkav', variables('cleanRGP'))]",
    "hcPublicIPAddressType":"Dynamic",
    "hcVmStorageAccountContainerName":"vhds",
    "hcVmName":"[concat('ans', variables('cleanRGP'))]",
    "frVmName":"[concat('web', variables('cleanRGP'))]",
    "bkVmName":"[concat('bdd', variables('cleanRGP'))]",
    "hcSubnetRef":"[concat(variables('vnetID'),'/subnets/',parameters('hcSubnetName'))]",
    "hcVmSize":"Standard_A0",
    "hcNetworkSecurityGroupName":"hcSecurityGroup",
    "frNetworkSecurityGroupName":"frSecurityGroup",
    "bkNetworkSecurityGroupName":"bkSecurityGroup",
    "sshKeyPath":"[concat('/home/',parameters('hcUsername'),'/.ssh/authorized_keys')]",
    "scriptsBaseUrl":"https://raw.githubusercontent.com/tomkor/azure-template-performance/master/scripts/",
    "ansiblePlaybookLocation":"deploy-prestashop.yml",
    "ansibleRolesReqLocation":"install_roles.yml",
    "ansibleVarsLocation":"vars/main.yml",
    "ansibleVarsMasterLocation":"vars/master.yml",
    "ansibleVarsSlaveLocation":"vars/slave.yml",
    "ansibleVarsDefaultLocation":"vars/mysql_default.yml",
    "customScriptDeployFile":"deploy.sh",
    "customScriptDeployUrl":"[concat(variables('scriptsBaseUrl'),variables('customScriptDeployFile'))]",
    "customScriptAnsibleCommand":"[concat('bash ',variables('customScriptDeployFile'))]",
    "ansiblePlaybookUrl":"[concat(variables('scriptsBaseUrl'),variables('ansiblePlaybookLocation'))]",
    "ansibleRolesReqUrl":"[concat(variables('scriptsBaseUrl'),variables('ansibleRolesReqLocation'))]",
    "ansibleVarsUrl":"[concat(variables('scriptsBaseUrl'),variables('ansibleVarsLocation'))]",
    "ansibleVarsMastersUrl":"[concat(variables('scriptsBaseUrl'),variables('ansibleVarsMasterLocation'))]",
    "ansibleVarsSlavesUrl":"[concat(variables('scriptsBaseUrl'),variables('ansibleVarsSlaveLocation'))]",
    "ansibleVarsDefaultsUrl":"[concat(variables('scriptsBaseUrl'),variables('ansibleVarsDefaultLocation'))]",
    "pythonAzureScriptUrl":"[concat(variables('scriptsBaseUrl'),'WriteSSHToPrivateStorage.py')]",
    "rmAzureScriptUrl":"[concat(variables('scriptsBaseUrl'),'RemovePrivateStorage.py')]",
    "paramsSubnets":"[concat(variables('hcSubnetRoot'),'\" \"',variables('frSubnetRoot'),'\" \"',variables('bkSubnetRoot'))]",
    "paramsNbHosts":"[concat(parameters('numberOfFront'),'\" \"',parameters('numberOfBack'))]",
    "paramsNames":"[concat(variables('hcVmName'),'\" \"',variables('frVmName'),'\" \"',variables('bkVmName'))]",
    "paramsExtra":"[concat(parameters('prestashop_password'),'\" \"',parameters('dnsNameForFrontPublicIP'),'.',resourceGroup().location)]",
    "paramsAdmin":"[concat(parameters('prestashop_firstname'),'\" \"',parameters('prestashop_lastname'),'\" \"',parameters('prestashop_email'),'\" \"',toLower(parameters('bkVmSize')))]",
    "paramsDeploy":"[concat(parameters('hcUsername'),'\" \"',variables('paramsSubnets'),'\" \"',variables('paramsNbHosts'),'\" \"',variables('paramsNames'),'\" \"',variables('paramsExtra'),'\" \"',variables('paramsAdmin'))]",
    "apiVersion":{
      "resources":{
        "deployments":"2021-01-01"
      },
      "network":"2021-06-15",
      "storage":"2021-06-15",
      "compute":"2021-06-15",
      "publicIPAddresses":"2021-09-01",
      "deployment":"2021-02-01"
    },
    "osProfile_hc_password": {
      "computerName": "[variables('hcVmName')]",
      "adminUsername": "[parameters('hcUsername')]",
      "adminPassword": "[parameters('hcPassword')]"
    },
    "osProfile_hc_sshPublicKey": {
      "computerName": "[variables('hcVmName')]",
      "adminUsername": "[parameters('hcUsername')]",
      "linuxConfiguration": {
        "disablePasswordAuthentication": "true",
        "ssh": {
          "publicKeys": [
            {
              "path":"[variables('sshKeyPath')]",
              "keyData":"[parameters('sshKeyData')]"
            }
          ]
        }
      }
    }
  },
  "resources":[
    {
      "name":"FrontDeployment",
      "type":"Microsoft.Resources/deployments",
      "apiVersion":"[variables('apiVersion').deployment]",
      "dependsOn":[
        "[concat('Microsoft.Storage/storageAccounts/', toLower(variables('keyStorageAccountName')))]",
        "[concat('Microsoft.Storage/storageAccounts/', toLower(variables('diagnosticsStorageAccountName')))]",
        "[concat('Microsoft.Network/networkSecurityGroups/',variables('frNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/virtualNetworks/',parameters('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIPAddresses/', parameters('frPublicIPAddressName'))]"
      ],
      "properties":{
        "mode":"Incremental",
        "templateLink":{
          "uri":"[variables('configuration').frontTemplateURL]",
          "contentVersion":"1.0.0.0"
        },
        "parameters":{
          "location":{
            "value":"[parameters('location')]"
          },
          "templatesBaseURL":{
            "value":"[parameters('templatesBaseURL')]"
          },
          "adminUserName":{
            "value":"[parameters('hcUsername')]"
          },
          "adminPassword":{
            "value":"[parameters('hcPassword')]"
          },
          "sshKeyData":{
            "value":"[parameters('sshKeyData')]"
          },
          "ubuntuOSVersion":{
            "value":"[variables('ubuntuOSVersion')]"
          },
          "frVmSize":{
            "value":"[parameters('frVmSize')]"
          },
          "numberOfFront":{
            "value":"[parameters('numberOfFront')]"
          },
          "frAvailabilitySetName":{
            "value":"[variables('frAvailabilitySetName')]"
          },
          "frStorageAccountName":{
            "value":"[parameters('frStorageAccountName')]"
          },
          "frStorageAccountType":{
            "value":"[parameters('frStorageAccountType')]"
          },
          "subnetCIDR":{
            "value":"[variables('subnetCIDR')]"
          },
          "frSubnetRoot":{
            "value":"[variables('frSubnetRoot')]"
          },
          "frSubnetName":{
            "value":"[parameters('frSubnetName')]"
          },
          "frSubnetPrefix":{
            "value":"[parameters('frSubnetPrefix')]"
          },
          "vnetID":{
            "value":"[variables('vnetID')]"
          },
          "frVmName":{
            "value":"[variables('frVmName')]"
          },
          "dnsNameForFrontPublicIP": {
             "value":"[parameters('dnsNameForFrontPublicIP')]"
          },
          "frPublicIPAddressName": {
            "value":"[parameters('frPublicIPAddressName')]"
          },
          "shopSize":{
            "value":"[parameters('shopSize')]"
          },
          "keyStorageAccountName":{
            "value":"[variables('keyStorageAccountName')]"
          },
          "diagnosticsStorageAccountName":{
            "value":"[variables('diagnosticsStorageAccountName')]"
          },
          "authenticationType":{
            "value":"[parameters('authenticationType')]"
          }
        }
      }
    },
    {
      "name":"BackDeployment",
      "type":"Microsoft.Resources/deployments",
      "apiVersion":"[variables('apiVersion').deployment]",
      "dependsOn":[
        "[concat('Microsoft.Storage/storageAccounts/', toLower(variables('keyStorageAccountName')))]",
        "[concat('Microsoft.Storage/storageAccounts/', toLower(variables('diagnosticsStorageAccountName')))]",
        "[concat('Microsoft.Network/networkSecurityGroups/',variables('bkNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/virtualNetworks/',parameters('virtualNetworkName'))]"
      ],
      "properties":{
        "mode":"Incremental",
        "templateLink":{
          "uri":"[variables('configuration').backTemplateURL]",
          "contentVersion":"1.0.0.0"
        },
        "parameters":{
          "location":{
            "value":"[parameters('location')]"
          },
          "templatesBaseURL":{
            "value":"[parameters('templatesBaseURL')]"
          },
          "adminUserName":{
            "value":"[parameters('hcUsername')]"
          },
          "adminPassword":{
            "value":"[parameters('hcPassword')]"
          },
          "sshKeyData":{
            "value":"[parameters('sshKeyData')]"
          },
          "ubuntuOSVersion":{
            "value":"[variables('ubuntuOSVersion')]"
          },
          "bkVmSize":{
            "value":"[parameters('bkVmSize')]"
          },
          "numberOfBack":{
            "value":"[parameters('numberOfBack')]"
          },
          "bkAvailabilitySetName":{
            "value":"[variables('bkAvailabilitySetName')]"
          },
          "bkStorageAccountName":{
            "value":"[parameters('bkStorageAccountName')]"
          },
          "bkStorageAccountType":{
            "value":"[parameters('bkStorageAccountType')]"
          },
          "subnetCIDR":{
            "value":"[variables('subnetCIDR')]"
          },
          "bkSubnetRoot":{
            "value":"[variables('bkSubnetRoot')]"
          },
          "bkSubnetName":{
            "value":"[parameters('bkSubnetName')]"
          },
          "bkSubnetPrefix":{
            "value":"[parameters('bkSubnetPrefix')]"
          },
          "vnetID":{
            "value":"[variables('vnetID')]"
          },
          "bkVmName":{
            "value":"[variables('bkVmName')]"
          },
          "shopSize":{
            "value":"[parameters('shopSize')]"
          },
          "keyStorageAccountName":{
            "value":"[variables('keyStorageAccountName')]"
          },
          "diagnosticsStorageAccountName":{
            "value":"[variables('diagnosticsStorageAccountName')]"
          },
          "authenticationType":{
            "value":"[parameters('authenticationType')]"
          }
        }
      }
    },
    {
      "comments":"Availability Set for Front VMs",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('frAvailabilitySetName')]",
      "apiVersion": "[variables('apiVersion').network]",
      "location": "[parameters('location')]",
      "properties": {
        "PlatformFaultDomainCount": "[variables('frFaultDomainCount')]",
        "PlatformUpdateDomainCount": "[variables('frUpdateDomainCount')]"
      }
    },
    {
      "comments":"Availability Set for Back VMs",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('bkAvailabilitySetName')]",
      "apiVersion": "[variables('apiVersion').network]",
      "location": "[parameters('location')]",
      "properties": {
        "PlatformFaultDomainCount": "[variables('bkFaultDomainCount')]",
        "PlatformUpdateDomainCount": "[variables('bkUpdateDomainCount')]"
      }
    },
    {
      "comments":"Network Security Group for Ansible Control VM",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/networkSecurityGroups",
      "name":"[variables('hcNetworkSecurityGroupName')]",
      "location":"[parameters('location')]",
      "tags":{
        "displayName":"ANSIBLE-NetworkSecurityGroup"
      },
      "properties":{
        "securityRules":[
          {
            "name":"openbar-in",
            "properties":{
              "protocol":"TCP",
              "sourcePortRange":"*",
              "destinationPortRange":"22",
              "sourceAddressPrefix":"*",
              "destinationAddressPrefix":"*",
              "access":"Allow",
              "priority":101,
              "direction":"Inbound"
            }
          }
        ]
      }
    },
    {
      "comments":"Network Security Group for front VMs",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/networkSecurityGroups",
      "name":"[variables('frNetworkSecurityGroupName')]",
      "location":"[parameters('location')]",
      "tags":{
        "displayName":"FRONT-NetworkSecurityGroup"
      },
      "properties":{
        "securityRules":[
          {
            "name":"http80-in",
            "properties":{
              "protocol":"TCP",
              "sourcePortRange":"*",
              "destinationPortRange":"80",
              "sourceAddressPrefix":"*",
              "destinationAddressPrefix":"*",
              "access":"Allow",
              "priority":101,
              "direction":"Inbound"
            }
          }
        ]
      }
    },
    {
      "comments":"Network Security Group for Back VMs",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/networkSecurityGroups",
      "name":"[variables('bkNetworkSecurityGroupName')]",
      "location":"[parameters('location')]",
      "tags":{
        "displayName":"BACK-NetworkSecurityGroup"
      },
      "properties":{
        "securityRules":[
          {
            "name":"hc-in",
            "properties":{
              "protocol":"*",
              "sourcePortRange":"*",
              "destinationPortRange":"*",
              "sourceAddressPrefix":"[parameters('hcSubnetPrefix')]",
              "destinationAddressPrefix":"*",
              "access":"Allow",
              "priority":102,
              "direction":"Inbound"
            }
          },
          {
            "name":"front-in",
            "properties":{
              "protocol":"*",
              "sourcePortRange":"*",
              "destinationPortRange":"*",
              "sourceAddressPrefix":"[parameters('frSubnetPrefix')]",
              "destinationAddressPrefix":"*",
              "access":"Allow",
              "priority":101,
              "direction":"Inbound"
            }
          },
          {
            "name":"back-in",
            "properties":{
              "protocol":"*",
              "sourcePortRange":"*",
              "destinationPortRange":"*",
              "sourceAddressPrefix":"[parameters('bkSubnetPrefix')]",
              "destinationAddressPrefix":"*",
              "access":"Allow",
              "priority":103,
              "direction":"Inbound"
            }
          }
        ]
      }
    },
    { "comments":"OK: Global Storage Account for Diags",
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('diagnosticsStorageAccountName')]",
      "apiVersion":"[variables('apiVersion').storage]",
      "location":"[parameters('location')]",
      "properties": {
        "accountType": "[variables('diagnosticsStorageAccountType')]"
      }
    },
    {
      "comments":"Global Storage Account for the Stack",
      "type":"Microsoft.Storage/storageAccounts",
      "name":"[toLower(variables('hcStorageAccountName'))]",
      "apiVersion":"[variables('apiVersion').storage]",
      "location":"[parameters('location')]",
      "properties":{
        "accountType":"[variables('hcStorageAccountType')]"
      }
    },
    {
      "comments":"Storage Account for Generated SSH keys or secrets",
      "type":"Microsoft.Storage/storageAccounts",
      "name":"[toLower(variables('keyStorageAccountName'))]",
      "apiVersion":"[variables('apiVersion').storage]",
      "location":"[parameters('location')]",
      "properties":{
        "accountType":"[variables('keyStorageAccountType')]"
      }
    },
    {
      "comments":"Public IP for Front Load Balancer",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/publicIPAddresses",
      "name":"[parameters('frPublicIPAddressName')]",
      "location":"[parameters('location')]",
      "properties":{
        "publicIPAllocationMethod":"[variables('frPublicIPAddressType')]",
        "dnsSettings":{
          "domainNameLabel":"[parameters('dnsNameForFrontPublicIP')]"
        }
      }
    },
    {
      "comments":"Public IP for Ansible Control VM",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/publicIPAddresses",
      "name":"[parameters('hcPublicIPAddressName')]",
      "location":"[parameters('location')]",
      "properties":{
        "publicIPAllocationMethod":"[variables('hcPublicIPAddressType')]",
        "dnsSettings":{
          "domainNameLabel":"[parameters('dnsNameForAnsiblePublicIP')]"
        }
      }
    },
    {
      "comments":"Virtual Network with 3 subnets admin, front, back",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/virtualNetworks",
      "name":"[parameters('virtualNetworkName')]",
      "location":"[parameters('location')]",
      "dependsOn":[
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('hcNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('frNetworkSecurityGroupName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('bkNetworkSecurityGroupName'))]"
      ],
      "properties":{
        "addressSpace":{
          "addressPrefixes":[
            "[parameters('addressPrefix')]"
          ]
        },
        "subnets":[
          {
            "name":"[parameters('hcSubnetName')]",
            "properties":{
              "addressPrefix":"[parameters('hcSubnetPrefix')]",
              "networkSecurityGroup":{
                "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('hcNetworkSecurityGroupName'))]"
              }
            }
          },
          {
            "name":"[parameters('frSubnetName')]",
            "properties":{
              "addressPrefix":"[parameters('frSubnetPrefix')]",
              "networkSecurityGroup":{
                "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('frNetworkSecurityGroupName'))]"
              }
            }
          },
          {
            "name":"[parameters('bkSubnetName')]",
            "properties":{
              "addressPrefix":"[parameters('bkSubnetPrefix')]",
              "networkSecurityGroup":{
                "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('bkNetworkSecurityGroupName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "comments":"Interface for Ansible Control VM with a public IP attached",
      "apiVersion":"[variables('apiVersion').network]",
      "type":"Microsoft.Network/networkInterfaces",
      "name":"[variables('hcNicName')]",
      "location":"[parameters('location')]",
      "dependsOn":[
        "[concat('Microsoft.Network/publicIPAddresses/', parameters('hcPublicIPAddressName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
      ],
      "properties":{
        "dnsSettings":{
          "dnsServers": []
        },
        "ipConfigurations":[
          {
            "name":"ipconfig1",
            "properties":{
              "privateIPAllocationMethod":"Dynamic",
              "publicIPAddress":{
                "id":"[resourceId('Microsoft.Network/publicIPAddresses',parameters('hcPublicIPAddressName'))]"
              },
              "subnet":{
                "id":"[variables('hcSubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "comments":"Custom script extension for the Ansible Control VM",
      "type":"Microsoft.Compute/virtualMachines/extensions",
      "name":"[concat(variables('hcVmName'),'/installAnsible')]",
      "apiVersion":"[variables('apiVersion').compute]",
      "location":"[parameters('location')]",
      "dependsOn":[
        "[concat('Microsoft.Compute/virtualMachines/', variables('hcVmName'))]"
      ],
      "properties":{
        "publisher":"Microsoft.OSTCExtensions",
        "type":"CustomScriptForLinux",
        "typeHandlerVersion":"1.4",
        "autoUpgradeMinorVersion": true,
        "settings":{
          "fileUris":[
            "[variables('customScriptDeployUrl')]",
            "[variables('ansiblePlaybookUrl')]",
            "[variables('ansibleRolesReqUrl')]",
            "[variables('ansibleVarsUrl')]",
            "[variables('pythonAzureScriptUrl')]",
            "[variables('rmAzureScriptUrl')]",
            "[variables('ansibleVarsMastersUrl')]",
            "[variables('ansibleVarsSlavesUrl')]",
            "[variables('ansibleVarsDefaultsUrl')]"
          ]
        },
        "protectedSettings":{
           "commandToExecute":"[concat(variables('customScriptAnsibleCommand'),' \"',variables('keyStorageAccountName'),'\" \"',listKeys(concat('Microsoft.Storage/storageAccounts/', variables('keyStorageAccountName')), variables('apiVersion').storage).key1,'\" \"',variables('paramsDeploy'),'\"')]"
        }
      }
    },
    {
      "comments":"Ansible Contol VM plays the playbook to provision the LAMP cluster",
      "apiVersion":"[variables('apiVersion').compute]",
      "type":"Microsoft.Compute/virtualMachines",
      "name":"[variables('hcVmName')]",
      "location":"[parameters('location')]",
      "dependsOn":[
        "[concat('Microsoft.Storage/storageAccounts/', toLower(variables('hcStorageAccountName')) ) ]",
        "[concat('Microsoft.Storage/storageAccounts/', toLower(variables('keyStorageAccountName')) )]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('hcNicName'))]"
      ],
      "properties":{
        "hardwareProfile":{
          "vmSize":"[variables('hcVmSize')]"
        },
        "osProfile": "[variables(concat('osProfile_hc_', parameters('authenticationType')))]",
        "storageProfile":{
          "imageReference":{
            "publisher":"[variables('imagePublisher')]",
            "offer":"[variables('imageOffer')]",
            "sku":"[variables('ubuntuOSVersion')]",
            "version":"latest"
          },
          "osDisk":{
            "name":"osdisk",
            "vhd":{
              "uri":"[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('hcStorageAccountName')), variables('apiVersion').storage).primaryEndpoints.blob, variables('hcVmStorageAccountContainerName'),'/', variables('hcOSDiskName'), '.vhd')]"
            },
            "caching":"ReadWrite",
            "createOption":"FromImage"
          }
        },
        "networkProfile":{
          "networkInterfaces":[
            {
              "id":"[resourceId('Microsoft.Network/networkInterfaces',variables('hcNicName'))]"
            }
          ]
        },
        "diagnosticsProfile":{
          "bootDiagnostics":{
            "enabled":"true",
            "storageUri":"[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('hcStorageAccountName')), variables('apiVersion').storage).primaryEndpoints.blob)]"
          }
        }
      }
    }
  ],
  "outputs": {
    "Ansible_FQDN": {
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('hcPublicIPAddressName')), variables('apiVersion').publicIPAddresses).dnsSettings.fqdn]",
      "type": "string"
    },
    "SHOP_FQDN": {
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('frPublicIPAddressName')), variables('apiVersion').publicIPAddresses).dnsSettings.fqdn]",
      "type": "string"
    }
  }
}
